# wantoexplore

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  flake.nix  package.json
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  capabilities.rs  lib.rs  main.rs  thumbnails.rs
src/lib/: archive-utils.ts  extensions.ts
src/lib/components/: ContextMenu.svelte  FileGrid.svelte  FileGridToolbar.svelte  FileGridView.svelte  FileListView.svelte  TrashView.svelte
src/lib/components/layout/: app-titlebar.svelte
src/lib/composables/: selection-utils.ts
src/lib/queries/: archive.ts  mutations.ts
src/lib/stores/: navigation.svelte.ts  selection.svelte.ts  settings.svelte.ts
src/routes/: +layout.svelte
