[package]
name = "teddypicker"
version = "1.2.0"
description = "TeddyPicker - a file manager"
authors = ["ikhwan-satrio"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "teddypicker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
dirs = "6"
trash = "5.2.3"
image = { version = "0.25.6", features = ["jpeg", "png", "gif", "bmp", "webp", "ico", "tiff", "avif"] }
sha2 = "0.10.9"
hex = "0.4.3"
tokio = { version = "1", features = ["sync"] }
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
